# Azlon-demo

./: .gitignore  Dockerfile  README.md  current_state.txt  docker-compose.yml  run.sh
backend/: Dockerfile  main.py  pyproject.toml  readme.md  schedule_workflow.py
backend/src/: client.py  prompts.py  services.py
backend/src/functions/: functions.py
backend/src/workflows/: workflow.py
frontend/: Dockerfile  README.md  index.html
frontend/src/: index.css
frontend/src/components/: ResultDisplay.tsx  WorkflowForm.tsx
frontend/src/pages/: Index.tsx
